external_ip.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    deploymentConfig: broker-a-amq
    deploymentConfig: broker-b-amq
    deploymentConfig: broker-c-amq
  name: brokers
spec:
  ports:
  - name: 61616-tcp
    port: 61616
    protocol: TCP
    targetPort: 61616
  selector:
    deploymentConfig: brokers
  externalIPs:
  - 172.30.120.93
  - 172.30.210.159
  - 172.30.71.39
  sessionAffinity: None
  type: ClusterIP
