router.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    router: router
  name: brokers
spec:
  ports:
  - name: 61616-tcp
    port: 61616
    protocol: TCP
    targetPort: 61616
  selector:
    router: router
  sessionAffinity: None
  type: ClusterIP
  clusterIP: None
status:
  loadBalancer: {}
