svc-u5.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The broker's OpenWire port.
  creationTimestamp: null
  labels:
    amq-cluster: amq-cluster-u5
  name: svc-u5
spec:
  ports:
  - port: 61616
    protocol: TCP
    targetPort: 61616
  selector:
    amq-cluster: amq-cluster-u5
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
